--- a/main.ipynb
+++ b/main.ipynb
@@ -25,10 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import progressbar\n",
-    "from urllib.request import urlretrieve\n",
-    "import zipfile"
+    "from custom_utils import R"
    ]
   },
   {
@@ -41,41 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c02c9e6d-b716-45f5-8f96-f12775672868",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pbar = None\n",
-    "\n",
-    "def show_progress(block_num, block_size, total_size):\n",
-    "    global pbar\n",
-    "    if pbar is None:\n",
-    "        pbar = progressbar.ProgressBar(maxval=total_size)\n",
-    "        pbar.start()\n",
-    "\n",
-    "    downloaded = block_num * block_size\n",
-    "    if downloaded < total_size:\n",
-    "        pbar.update(downloaded)\n",
-    "    else:\n",
-    "        pbar.finish()\n",
-    "        pbar = None\n",
-    "\n",
-    "def RetrieveData(URL, rootpath=\"./data\"):\n",
-    "    if os.path.isdir(rootpath)==False:\n",
-    "        os.mkdir('./data')\n",
-    "        \n",
-    "    if os.path.isfile(os.path.join(rootpath,'data.zip'))==False:\n",
-    "        print('Downloading archive')\n",
-    "        urlretrieve(URL,os.path.join(rootpath,'data.zip'),show_progress)\n",
-    "        print('Extracting')\n",
-    "        with zipfile.ZipFile(os.path.join(rootpath,'data.zip'),'r') as Zip:\n",
-    "            Zip.extractall(rootpath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "657feb4c-3524-4a30-a377-cd1f2587270d",
    "metadata": {},
    "outputs": [
@@ -90,29 +53,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% |#########################################################################|\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting\n"
-     ]
-    },
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 28] No space left on device",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m DataURL\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://tinyurl.com/mr2yc5nx\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mRetrieveData\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDataURL\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36mRetrieveData\u001b[0;34m(URL, rootpath)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExtracting\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m zipfile\u001b[38;5;241m.\u001b[39mZipFile(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(rootpath,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata.zip\u001b[39m\u001b[38;5;124m'\u001b[39m),\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m Zip:\n\u001b[0;32m---> 25\u001b[0m     \u001b[43mZip\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextractall\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrootpath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/IML/lib/python3.10/zipfile.py:1645\u001b[0m, in \u001b[0;36mZipFile.extractall\u001b[0;34m(self, path, members, pwd)\u001b[0m\n\u001b[1;32m   1642\u001b[0m     path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mfspath(path)\n\u001b[1;32m   1644\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m zipinfo \u001b[38;5;129;01min\u001b[39;00m members:\n\u001b[0;32m-> 1645\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_extract_member\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzipinfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpwd\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/IML/lib/python3.10/zipfile.py:1700\u001b[0m, in \u001b[0;36mZipFile._extract_member\u001b[0;34m(self, member, targetpath, pwd)\u001b[0m\n\u001b[1;32m   1696\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m targetpath\n\u001b[1;32m   1698\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mopen(member, pwd\u001b[38;5;241m=\u001b[39mpwd) \u001b[38;5;28;01mas\u001b[39;00m source, \\\n\u001b[1;32m   1699\u001b[0m      \u001b[38;5;28mopen\u001b[39m(targetpath, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m target:\n\u001b[0;32m-> 1700\u001b[0m     \u001b[43mshutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopyfileobj\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1702\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m targetpath\n",
-      "File \u001b[0;32m~/miniconda3/envs/IML/lib/python3.10/shutil.py:198\u001b[0m, in \u001b[0;36mcopyfileobj\u001b[0;34m(fsrc, fdst, length)\u001b[0m\n\u001b[1;32m    196\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m buf:\n\u001b[1;32m    197\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m--> 198\u001b[0m \u001b[43mfdst_write\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbuf\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 28] No space left on device"
+      "100% |#########################################################################|\n",
+      "Extracting : 100%|████████████████████| 243438/243438 [00:56<00:00, 4277.46it/s]\n"
      ]
     }
    ],
