--- a/main.ipynb
+++ b/main.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from custom_utils import R"
+    "from utils.custom_utils import RetrieveData"
    ]
   },
   {
@@ -38,26 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "657feb4c-3524-4a30-a377-cd1f2587270d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading archive\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100% |#########################################################################|\n",
-      "Extracting : 100%|████████████████████| 243438/243438 [00:56<00:00, 4277.46it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DataURL='https://tinyurl.com/mr2yc5nx'\n",
     "\n",
