add docstring to custom_utils functions

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "90d9d722-3953-44f8-832b-87d93680d76e",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "657feb4c-3524-4a30-a377-cd1f2587270d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,9 @@
    "id": "b46ae538-daa4-4d67-b880-6fbb0f4d0dce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "RetrieveData()"
+   ]
   }
  ],
  "metadata": {
