added a data loader but it has to be modified

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,12 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "id": "90d9d722-3953-44f8-832b-87d93680d76e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.custom_utils import RetrieveData"
+    "import os\n",
+    "from glob import glob\n",
+    "from utils.custom_utils import RetrieveData\n",
+    "import pandas as pd\n",
+    "\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset"
    ]
   },
   {
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "657feb4c-3524-4a30-a377-cd1f2587270d",
    "metadata": {},
    "outputs": [],
@@ -49,13 +60,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d7ed245-837a-4a66-9547-dab4691b440d",
+   "metadata": {},
+   "source": [
+    "## dataloader"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b46ae538-daa4-4d67-b880-6fbb0f4d0dce",
+   "execution_count": 70,
+   "id": "039897b5-4ead-4b0a-843d-ff7424ba0e20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RetrieveData()"
+    "image_path='./data/images_gz2/images'\n",
+    "images=glob(os.path.join(image_path,'*.jpg'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c85ffa5e-833b-4ba9-8bd7-024ab0cd702f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GalaxyZoo2Dataset(Dataset):\n",
+    "    def __init__(self, annotations_file, img_dir, transform=None, target_transform=None):\n",
+    "        self.img_labels = pd.read_csv(annotations_file)\n",
+    "        self.img_dir = img_dir\n",
+    "        self.transform = transform\n",
+    "        self.target_transform = target_transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.img_labels)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        img_path = os.path.join(self.img_dir, self.img_labels.iloc[idx, 0])\n",
+    "        image = read_image(img_path)\n",
+    "        label = self.img_labels.iloc[idx, 1]\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "        if self.target_transform:\n",
+    "            label = self.target_transform(label)\n",
+    "        return image, label"
    ]
   }
  ],
