--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "90d9d722-3953-44f8-832b-87d93680d76e",
    "metadata": {},
    "outputs": [],
@@ -156,12 +156,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "512fbce8-285c-497f-8fc8-ac765c580870",
+   "metadata": {},
+   "source": [
+    "## VAE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6a30bc-0b55-4515-8172-5451ff7ee6b5",
+   "id": "89c7269c-83b0-4722-acc2-3ecfd4e9d856",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MLP_VAE(nn.Module):\n",
+    "    def __init__(self,img_dim,latent_dim,mlp_outlayers=256,intermediate_dim=128):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.encoder = nn.Sequential(nn.Linear(img_dim, mlp_outlayers),\n",
+    "                                     nn.ReLU(),\n",
+    "                                     nn.Linear(mlp_outlayers, intermediate_dim))\n",
+    "        \n",
+    "        self.mu     = nn.Linear(intermediate_dim, latent_dim)\n",
+    "        self.logvar = nn.Linear(intermediate_dim, latent_dim)\n",
+    "        \n",
+    "        self.latent_mapping = nn.Linear(latent_dim, intermediate_dim)\n",
+    "        \n",
+    "        self.decoder = nn.Sequential(nn.Linear(intermediate_dim, mlp_outlayers),\n",
+    "                                     nn.ReLU(),\n",
+    "                                     nn.Linear(mlp_outlayers, img_dim))\n",
+    "        \n",
+    "        \n",
+    "    def encode(self, x):\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        encoder = self.encoder(x)\n",
+    "        mu, logvar = self.mu(encoder), self.logvar(encoder)\n",
+    "        return mu, logvar\n",
+    "        \n",
+    "    def sample_z(self, mu, logvar):\n",
+    "        eps = torch.rand_like(mu)\n",
+    "        return mu + eps * torch.exp(0.5 * logvar)\n",
+    "    \n",
+    "    def decode(self, z,x):\n",
+    "        latent_z = self.latent_mapping(z)\n",
+    "        out = self.decoder(latent_z)\n",
+    "        reshaped_out = torch.sigmoid(out).view(x.shape[0],1, 28,28)\n",
+    "        return reshaped_out\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        \n",
+    "        mu, logvar = self.encode(x)\n",
+    "        z = self.sample_z(mu, logvar)\n",
+    "        output = self.decode(z,x)\n",
+    "        \n",
+    "        return output"
+   ]
   }
  ],
  "metadata": {
