--- a/main.ipynb
+++ b/main.ipynb
@@ -366,7 +366,13 @@
    "id": "9f7310f1-482c-47b2-8a06-a59aa34f83ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ElboLoss(x, x_reconstructed, mu, logvar):\n",
+    "    criterion = nn.BCELoss(x, x_reconstructed)\n",
+    "    KL_div = 0.5*torch.sum(1 + logvar - mu**2 - torch.exp(logvar))\n",
+    "    elbo = torch.mean(criterion - KL_div)\n",
+    "    return elbo"
+   ]
   }
  ],
  "metadata": {
