normalized images but can be done in a more elegant way

--- a/main.ipynb
+++ b/main.ipynb
@@ -113,7 +113,7 @@
     "        with Image.open(img_path) as im:\n",
     "            if self.transform:\n",
     "                im = self.transform(im)\n",
-    "            return im.float()"
+    "            return im.float()/255"
    ]
   },
   {
@@ -255,8 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainset = GalaxyZoo2(image_path, transform=transforms.PILToTensor())\n",
-    "trainloader = DataLoader(trainset, batch_size=batch_size, shuffle=True, num_workers=2)"
+    "trainset = GalaxyZoo2(image_path, transform=transforms.Compose([transforms.PILToTensor(),]), train=True)\n",
+    "trainloader = DataLoader(trainset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
