add train function

--- a/main.ipynb
+++ b/main.ipynb
@@ -256,7 +256,7 @@
    "outputs": [],
    "source": [
     "trainset = GalaxyZoo2(image_path, transform=transforms.Compose([transforms.PILToTensor(),]), train=True)\n",
-    "trainloader = DataLoader(trainset, batch_size=batch_size, shuffle=True)"
+    "trainloader = DataLoader(trainset, batch_size=batch_size, shuffle=True, num_workers=2)"
    ]
   },
   {
@@ -273,21 +273,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d70565c9-ea50-4abb-8239-a69c80c3bfb4",
+   "id": "6ac8b04e-90a6-4c8c-a775-9f9ec73da0f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for epoch in range(num_epochs):\n",
+    "def train(num_epochs):\n",
+    "    \"\"\"\n",
+    "    Train the model (VAE) onto the data in the trainloader\n",
+    "    \"\"\"\n",
+    "    train_avg_loss = []\n",
     "    loop = tqdm(enumerate(trainloader))\n",
-    "    for i,x in loop:\n",
-    "        x = x.to(device).view(x.shape[0],-1)\n",
-    "        x_reconstructed, mu, logvar = model(x)\n",
+    "    \n",
+    "    for i in range(num_epochs):\n",
+    "        train_losses = []\n",
+    "        loop\n",
     "        \n",
-    "        loss = ElboLoss(x, x_reconstructed, mu, logvar)\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        loop.set_postfix(loss=loss.item())"
+    "        for i,x in loop:\n",
+    "            x = x.to(device).view(x.shape[0],-1)\n",
+    "            x_reconstructed, mu, logvar = model(x)\n",
+    "        \n",
+    "            loss = ElboLoss(x, x_reconstructed, mu, logvar)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            loop.set_postfix(loss=loss.item())\n",
+    "            train_losses.append(loss.detach())\n",
+    "                    \n",
+    "        train_avg_loss.append(torch.mean(torch.FloatTensor(train_losses)))\n",
+    "\n",
+    "    return train_avg_loss #we could also return the reconstruction loss and the regularization loss individually, but in the end it is the ELBO loss that is important"
    ]
   },
   {
@@ -296,7 +310,11 @@
    "id": "f88a293e-0d42-499f-839d-a3d3190b8f46",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "images=next(iter(trainloader))\n",
+    "test,mu,logvar=model(images.view(images.shape[0],-1))\n",
+    "show_images(utils.make_grid(test.view(test.shape[0],3,424,424)[0]))"
+   ]
   }
  ],
  "metadata": {
