model to devive

--- a/main.ipynb
+++ b/main.ipynb
@@ -372,10 +372,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model=model.to('cpu')\n",
     "images=next(iter(trainloader))\n",
     "test,mu,logvar=model(images.view(images.shape[0],-1))\n",
     "show_images(utils.make_grid(test.view(test.shape[0],3,424,424)[0]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c1c0e02-4f06-47ce-a4e4-46a585a42b21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
