--- a/main.ipynb
+++ b/main.ipynb
@@ -787,8 +787,7 @@
     "model=model.to('cpu')\n",
     "images=next(iter(trainloader))\n",
     "test,mu,logvar=model(images)\n",
-    "sub=test[0]-test[1]\n",
-    "show_images(utils.make_grid(sub))"
+    "show_images(utils.make_grid(test))"
    ]
   },
   {
@@ -802,9 +801,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:DeepLearning]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-DeepLearning-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -816,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
