--- a/Conv_VAE.ipynb
+++ b/Conv_VAE.ipynb
@@ -369,7 +369,62 @@
    "id": "67c95570-30e3-4dcd-9535-823e65274685",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.save(model, os.path.join('models',model_name+'.pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b52066d-9c24-4685-a0ed-52d18661b260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(train_avg_loss)\n",
+    "plt.title('loss')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f22ed38-5edb-45bb-a4fd-0b5f22ec1ff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=model.to('cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf465d01-f03a-4750-a0d4-5c820c02f7a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testset = GalaxyZoo2(image_path, transform=transforms.Compose([transforms.PILToTensor()]), train=False, dataset_size=1000)\n",
+    "testloader = DataLoader(testset,batch_size=batch_size, shuffle=True, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3333e877-a1ae-4c0a-95e7-438cfa1083ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mus=[]\n",
+    "sigmas=[]\n",
+    "for testimages in iter(testloader):\n",
+    "\n",
+    "    testmu,testsigma=model.encode(testimages.view(testimages.shape[0],-1))\n",
+    "    mus.append(testmu.detach().numpy())\n",
+    "    sigmas.append(testsigma.detach().numpy())\n",
+    "mus=np.concatenate(mus)\n",
+    "sigmas=np.concatenate(sigmas)\n",
+    "plt.plot(mus[:,0],mus[:,1],'+')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
